--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ AElFTkSuQmCC
 </head>
 
 <body style="background-color: rgb(238, 238, 238);">
+<a href="https://github.com/justbrowsing/justbrowsing-notes"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 <div class="container">
 	<div style="margin-top:20px; margin-left:20px; margin-right:40px">
 		<h4>bootstrap-wysihtml5 <small>Simple, beautiful wysiwyg editors</small></h4>
