--- a/index.html
+++ b/index.html
@@ -56,5 +56,11 @@ $('.textarea').wysihtml5({
 	$(prettyPrint);
 </script>
 
+<script type="text/javascript">
+var sc_project=9124671; var sc_invisible=1; var sc_security="1e24cdf5"; 
+var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" + scJsHost + "statcounter.com/counter/counter.js'></"+"script>");
+</script><noscript><div class="statcounter"><a title="free hit counters" href="http://statcounter.com/" target="_blank">
+<img class="statcounter" src="http://c.statcounter.com/9124671/0/1e24cdf5/1/" alt="free hit counters"></a></div></noscript>
 </body>
 </html>
